<resources>
    <string name="app_name">First App Kotlin</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="floating_button">Botão flutuante</string>
    <string name="photos">Fotos</string>
    <string name="curiosity">Curiosidades</string>
    <string name="cats">Gatos</string>
    <string name="logout">Sair</string>
    <string name="search">Pesquisar</string>
    <string name="race">Raça</string>
    <string name="quantity">Quantidade</string>
    <string name="dogs">Cachorros</string>
</resources>